@@ -48,6 +48,7 @@ REASSIGN BLOCKS     sg_reassign, ++
 RECEIVE DIAGNOSTIC  sg_senddiag, sg_ses, ++
 REPORT IDENTIFYING INFORMATION  sg_ident, ++ (2)
 REPORT LUNS         sg_luns, ++
+REPORT REFERRALS    sg_referrals, ++
 REPORT SUPPORTED OPERATION CODES              sg_opcodes
 REPORT SUPPORTED TASK MANAGEMENT FUNCTIONS    sg_opcodes
 REPORT TARGET PORT GROUPS       sg_rtpg, sg_stpg ++
@@ -94,4 +95,4 @@ SMART READ DATA     examples/sg_sat_smart_rd_data
 
 
 Doug Gilbert
-20th September 2009
+6th September 2010
