@@ -167,6 +167,14 @@ extern int sg_ll_report_tgt_prt_grp(int sg_fd, void * resp,
 extern int sg_ll_set_tgt_prt_grp(int sg_fd, void * paramp,
                                     int param_len, int noisy, int verbose);
 
+/* Invokes a SCSI REPORT REFERRALS command. Return of 0 -> success,
+ * SG_LIB_CAT_INVALID_OP -> Report Referrals not supported,
+ * SG_LIB_CAT_ILLEGAL_REQ -> bad field in cdb, SG_LIB_CAT_ABORTED_COMMAND,
+ * SG_LIB_CAT_UNIT_ATTENTION, -1 -> other failure */
+extern int sg_ll_report_referrals(int sg_fd, uint64_t start_llba, int one_seg,
+                                  void * resp,int mx_resp_len, int noisy,
+                                  int verbose);
+
 /* Invokes a SCSI SEND DIAGNOSTIC command. Foreground, extended self tests can
  * take a long time, if so set long_duration flag. Return of 0 -> success,
  * SG_LIB_CAT_INVALID_OP -> Send diagnostic not supported,
