@@ -2,7 +2,8 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.30 [20100906] [svn: r350]
+Changelog for sg3_utils-1.30 [20100906] [svn: r351]
+  - sg_referrals: new utility for REPORT REFERRALS
   - sg_inq: update version descriptor list to spc4r26
   - sg_lib: sync asc/ascq list to spc4r25 (no change to r26)
     - dStrHex(): trim excess trailing spaces
